--- a/README
+++ b/README
@@ -1,11 +1,9 @@
 This repository contains the devleopment files for the OCR module in the Faxmydoc project.
 
 Current state:
-    - main depends on templar which depends on sax
-    - as temporary placeholders to get the dependency system working, the following functions are implemented:
-        - in sax.cpp:     Sax::Testing123() which depends on nothing
-        - in templar.cpp: Templar::Testing456() which depends on Sax::Testing123()
-        - in main.cpp:    main() which depends on Templar456()
+    - Reads documents! OCRs Regions!
+    - Need to develop and implement command-line parsing scheme
+    - Need to think of template interchange format... XML? JSON? A database?
 
 Issues:
-    - upon compiling main(), an error is thrown claiming an undefined reference to Templar::Testing456()
+    - None!
